Modification dans l'API de base de données locale (CSV) pour utiliser des objets plutôt que des Map. Sécurisation dans l'accès concurrentiels aux fichiers. Amélioration des performances en lectures et écritures.